--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,7 @@
     <title>dog-image-search</title>
   </head>
   <body>
-    <div id="App"></div>
+    <div id="app"></div>
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
